Add Less, less-watch-compiler and concurrently packages

--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "concurrently": "^6.0.2",
+    "less": "^4.1.1",
+    "less-watch-compiler": "^1.15.0",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   }
