--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "concurrently --kill-others \"less-watch-compiler --config less-watcher.config.json\" \"craco start\"",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
