--- a/less-watcher-config.json
+++ b/less-watcher-config.json
@@ -1,6 +1,6 @@
 {
-  "watchFolder": "src/",
-  "outputFolder": "src/",
+  "watchFolder": "src/less",
+  "outputFolder": "/",
   "sourceMap": true,
   "runOnce": false,
   "enableJs": true
